# app/routes/staff/route.ts
@@ -8,7 +8,6 @@ const router = express.Router();
 const controller = new staffController();
 
 router.post('/login', controller.login);
-router.post('/register', controller.register);
 router.post('/resend-otp', controller.resendOtp);
 router.post('/verify-otp', controller.verifyOtp);
 router.post('/upload', authenticateStaffJwt, parseSingleUpload('file'), uploadSingleFileToS3('staff'), controller.upload);
